fixed split keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,9 +21,9 @@ bind l select-pane -R
 
 # change split pane keys to something more intuitive
 unbind %
-bind | split-window -v
+bind _ split-window -v
 unbind '"'
-bind _ split-window -h
+bind | split-window -h
 
 # Prevent hanging
 setw -g c0-change-trigger 10
