--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,10 +5,13 @@ unbind C-b
 set -g prefix C-a
 
 # fix my terminal colors
-set -g default-terminal "rxvt-unicode-256color"
+set -g default-terminal "screen-256color"
 
 # I might have my hand on the mouse a time or two...
 set -g mouse-select-pane on
+
+# Enable Scrolling
+setw -g mode-mouse on
 
 # limit history
 set -g history-limit 8192
