added some base16 colors

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ setw -g c0-change-interval 250
 bind R source-file ~/.tmux.conf \; display-message "Reloaded!"
 
 # set theme
-source-file ~/.tmux/old_theme
+source-file ~/.tmux/curr-theme
 
 # initialize my workspace
 bind S source-file ~/.tmux/standard
