Added rust, again.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,10 +8,10 @@ set -g prefix C-a
 set -g default-terminal "screen-256color"
 
 # I might have my hand on the mouse a time or two...
-set -g mouse-select-pane on
+# set -g mouse-select-pane on
 
 # Enable Scrolling
-setw -g mode-mouse on
+# setw -g mode-mouse on
 
 # limit history
 set -g history-limit 8192
@@ -29,8 +29,8 @@ unbind '"'
 bind | split-window -h
 
 # Prevent hanging
-setw -g c0-change-trigger 10
-setw -g c0-change-interval 250
+# setw -g c0-change-trigger 10
+# setw -g c0-change-interval 250
 
 # Reload this file for debugging purposes
 bind R source-file ~/.tmux.conf \; display-message "Reloaded!"
