--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -34,46 +34,18 @@ markup=none
 # The second parameter overrides the mixer selection
 # See the script for details.
 [volume]
-label=VOL
-#label=♪
+label=
 instance=Master
 #instance=PCM
-interval=once
+interval=1
 signal=10
-
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
-separator=false
-interval=30
-
-# Disk usage
-#
-# The directory defaults to $HOME if the instance is not specified.
-# The script may be called with a optional argument to set the alert
-# (defaults to 10 for 10%).
-[disk]
-label=HOME
-#instance=/mnt/data
-interval=30
-
-[wifi]
-label=wifi
-instance=wlp5s1
-interval=10
-separator=false
-
-[bandwidth]
-#instance=eth0
-interval=5
 
 # Date Time
 #
 [time]
+label=
 command=date '+%Y-%m-%d %H:%M:%S'
-interval=5
+interval=1
 
 # Generic media player support
 #
