--- a/.i3/config
+++ b/.i3/config
@@ -89,18 +89,18 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-set $workspace1 "1: "
 # default terminals
-set $workspace2 "2: "
+set $workspace1 "1: "
 # firefox
-set $workspace3 "3: "
+set $workspace2 "2: "
 # sublime
-set $workspace4 "4: "
+set $workspace3 "3: "
 # robomongo
-set $workspace5 "5: "
+set $workspace4 "4: "
 # gimp
-set $workspace10 "10: "
+set $workspace5 "5: "
 # music
+set $workspace10 "10: "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -126,7 +126,7 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
-assign [class="chromium"] $workspace2
+assign [class="Firefox"] $workspace2
 assign [class="firefox"] $workspace2
 assign [class="Subl3"] $workspace3
 assign [class="robomongo"] $workspace4
@@ -219,7 +219,7 @@ bindsym XF86AudioPrev exec playerctl previous
 bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 400 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Liberation Sans 18"
 
 exec compton -f
-exec_always feh --bg-scale /home/brenton/Pictures/Wallpaper/yuri.jpg
+exec_always feh --bg-scale /home/brenton/Pictures/newrings_cassini_big.jpg
 
 # configure monitor layout. The arguments were extracted from the arandr program.
 # exec_always xrandr --output DVI-D-0 --primary --mode 1920x1080 --pos 0x0 --rotate normal --output HDMI-0 --off --output DVI-I-1 --mode 1920x1080 --pos 1920x0 --rotate normal --output DVI-I-0 --off --output DP-1 --off --output DP-0 --off
