--- a/.i3/config
+++ b/.i3/config
@@ -98,9 +98,17 @@ set $workspace3 "3: "
 # robomongo
 set $workspace4 "4: "
 # gimp
-set $workspace5 "5: "
+set $workspace5 "5: "
+# inkscape
+set $workspace6 "6: "
+# Libreoffice Calc
+set $workspace7 "7: "
+# Libreoffice Writer
+set $workspace8 "8: "
+# Libreoffice Draw
+set $workspace9 "9: "
 # music
-set $workspace10 "10: "
+set $workspace10 "10: "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -108,10 +116,10 @@ bindsym $mod+2 workspace $workspace2
 bindsym $mod+3 workspace $workspace3
 bindsym $mod+4 workspace $workspace4
 bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+6 workspace $workspace6
+bindsym $mod+7 workspace $workspace7
+bindsym $mod+8 workspace $workspace8
+bindsym $mod+9 workspace $workspace9
 bindsym $mod+0 workspace $workspace10
 
 # move focused container to workspace
@@ -120,17 +128,20 @@ bindsym $mod+Shift+2 move container to workspace $workspace2
 bindsym $mod+Shift+3 move container to workspace $workspace3
 bindsym $mod+Shift+4 move container to workspace $workspace4
 bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+6 move container to workspace $workspace6
+bindsym $mod+Shift+7 move container to workspace $workspace7
+bindsym $mod+Shift+8 move container to workspace $workspace8
+bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 assign [class="Firefox"] $workspace2
-assign [class="firefox"] $workspace2
 assign [class="Subl3"] $workspace3
 assign [class="robomongo"] $workspace4
 assign [class="Gimp"] $workspace5
+assign [class="Inkscape"] $workspace6
+assign [class="libreoffice-calc"] $workspace7
+assign [class="libreoffice-writer"] $workspace8
+assign [class="libreoffice-draw"] $workspace9
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
