--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -47,6 +47,25 @@ label=
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
 
+[memory]
+label=MEM
+interval=30
+
+[wifi]
+label=WIFI
+instance=wlp2s0
+interval=10
+
+[cpu_usage]
+label=CPU
+interval=10
+min_width=CPU: 100.00%
+
+[battery]
+label=BAT
+interval=30
+
+
 # Generic media player support
 #
 # This displays "ARTIST - SONG" if a music is playing.
