status bar junk

--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -40,20 +40,13 @@ instance=Master
 interval=1
 signal=10
 
-# Date Time
-#
-[time]
-label=
-command=date '+%Y-%m-%d %H:%M:%S'
-interval=1
-
 [memory]
 label=MEM
 interval=30
 
 [wifi]
 label=WIFI
-instance=wlp2s0
+instance=wlp5s1
 interval=10
 
 [cpu_usage]
@@ -61,10 +54,16 @@ label=CPU
 interval=10
 min_width=CPU: 100.00%
 
-[battery]
-label=BAT
-interval=30
+#[battery]
+#label=BAT
+#interval=30
 
+# Date Time
+#
+[time]
+label=
+command=date '+%Y-%m-%d %H:%M:%S'
+interval=1
 
 # Generic media player support
 #
