--- a/.i3/i3blocks.conf
+++ b/.i3/i3blocks.conf
@@ -33,12 +33,12 @@ markup=none
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-label=
-instance=Master
-#instance=PCM
-interval=1
-signal=10
+# [volume]
+# label=
+# instance=Master
+# #instance=PCM
+# interval=1
+# signal=10
 
 [memory]
 label=MEM
@@ -47,7 +47,7 @@ interval=30
 [wifi]
 label=WIFI
 instance=wlp2s0
-#instance=wlp5s1
+##instance=wlp5s1
 interval=10
 
 [cpu_usage]
