--- a/.i3/config
+++ b/.i3/config
@@ -28,12 +28,13 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
+#bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -88,9 +89,9 @@ bindsym $mod+a focus parent
 
 new_window pixel 2
 
-gaps inner 8
-gaps outer 1
-smart_gaps on
+#gaps inner 8
+#gaps outer 1
+#smart_gaps on
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -200,7 +201,8 @@ hide_edge_borders both
 # finds out, if available)
 bar {
     position top
-    status_command i3blocks -c ~/.i3/i3blocks.conf
+    status_command i3status
+    #status_command i3blocks -c ~/.i3/i3blocks.conf
     #mode hide
     #modifier Mod1
     colors {
@@ -231,7 +233,7 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 435 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Liberation Sans 18"
+#bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -width 100 -padding 435 -opacity "85" -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd" -font "Liberation Sans 18"
 
 # exec compton -f
 exec_always feh --bg-scale /home/brenton/Pictures/shuttle_flat.jpg
