--- a/.i3status.conf
+++ b/.i3status.conf
@@ -9,12 +9,15 @@
 general {
         colors = true
         interval = 5
+        color_good = "#a3be8c"
+        color_degraded = "#ebcb8b"
+        color_bad = "#bf616a"
 }
 
 order += "ipv6"
 order += "disk /"
 order += "run_watch DHCP"
-order += "run_watch VPN"
+#order += "run_watch VPN"
 order += "wireless wlp2s0"
 order += "ethernet enp4s0"
 order += "battery 0"
@@ -40,9 +43,9 @@ run_watch DHCP {
         pidfile = "/var/run/dhcpcd*.pid"
 }
 
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
-}
+#run_watch VPN {
+#        pidfile = "/var/run/vpnc/pid"
+#}
 
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
