--- a/.i3status.conf
+++ b/.i3status.conf
@@ -14,25 +14,26 @@ general {
         color_bad = "#bf616a"
 }
 
-order += "ipv6"
+order += "volume master"
+order += "run_watch VPN"
 order += "disk /"
 order += "run_watch DHCP"
-#order += "run_watch VPN"
 order += "wireless wlp2s0"
-order += "ethernet enp4s0"
 order += "battery 0"
 order += "load"
 order += "tztime local"
 
+volume master {
+        format = "♪: %volume"
+        #format_muted = "♪: muted (%volume)"
+        device = "hw:0"
+        mixer = "Master"
+        mixer_idx = 0
+}
+
 wireless wlp2s0 {
         format_up = "W: (%quality at %essid) %ip"
         format_down = "W: down"
-}
-
-ethernet enp4s0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
 }
 
 battery 0 {
@@ -43,9 +44,9 @@ run_watch DHCP {
         pidfile = "/var/run/dhcpcd*.pid"
 }
 
-#run_watch VPN {
-#        pidfile = "/var/run/vpnc/pid"
-#}
+run_watch VPN {
+        pidfile = "/var/run/openvpn.pid"
+}
 
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
