--- a/.i3status.conf
+++ b/.i3status.conf
@@ -15,9 +15,10 @@ general {
 }
 
 order += "volume master"
-order += "run_watch VPN"
 order += "disk /"
+order += "run_watch VPN"
 order += "run_watch DHCP"
+order += "ethernet enp10s0u1u3"
 order += "wireless wlp2s0"
 order += "battery 0"
 order += "load"
@@ -29,6 +30,11 @@ volume master {
         device = "hw:0"
         mixer = "Master"
         mixer_idx = 0
+}
+
+ethernet enp10s0u1u3 {
+        format_up = "E: %ip (%speed)"
+        format_down = "E: down"
 }
 
 wireless wlp2s0 {
