--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,7 @@
 # ~/.tmux.conf - very much a work in progress
 
+set -g status-position top
+
 # change main binding to that of gnu screen
 unbind C-b
 set -g prefix C-a
