--- a/.i3status.conf
+++ b/.i3status.conf
@@ -19,6 +19,7 @@ order += "disk /"
 order += "run_watch VPN"
 order += "run_watch DHCP"
 order += "ethernet enp10s0u1u3"
+order += "ethernet enp62s0u1u3"
 order += "wireless wlp2s0"
 order += "battery 0"
 order += "load"
@@ -26,15 +27,20 @@ order += "tztime local"
 
 volume master {
         format = "♪: %volume"
-        #format_muted = "♪: muted (%volume)"
+        format_muted = "♪: muted (%volume)"
         device = "hw:0"
         mixer = "Master"
         mixer_idx = 0
 }
 
 ethernet enp10s0u1u3 {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "E1: %ip (%speed)"
+        format_down = "E1: down"
+}
+
+ethernet enp62s0u1u3 {
+        format_up = "E6: %ip (%speed)"
+        format_down = "E6: down"
 }
 
 wireless wlp2s0 {
