--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 # ~/.tmux.conf - very much a work in progress
 
-set -g status-position top
+set -g status-position bottom
 
 # change main binding to that of gnu screen
 unbind C-b
