--- a/.i3status.conf
+++ b/.i3status.conf
@@ -18,7 +18,6 @@ order += "volume master"
 order += "disk /"
 order += "run_watch VPN"
 order += "run_watch DHCP"
-order += "ethernet enp10s0u1u3"
 order += "ethernet enp62s0u1u3"
 order += "wireless wlp2s0"
 order += "battery 0"
@@ -33,14 +32,9 @@ volume master {
         mixer_idx = 0
 }
 
-ethernet enp10s0u1u3 {
-        format_up = "E1: %ip (%speed)"
-        format_down = "E1: down"
-}
-
 ethernet enp62s0u1u3 {
-        format_up = "E6: %ip (%speed)"
-        format_down = "E6: down"
+        format_up = "E: %ip (%speed)"
+        format_down = "E: down"
 }
 
 wireless wlp2s0 {
@@ -50,6 +44,7 @@ wireless wlp2s0 {
 
 battery 0 {
         format = "%status %percentage %remaining"
+        last_full_capacity = true
 }
 
 run_watch DHCP {
@@ -70,4 +65,5 @@ load {
 
 disk "/" {
         format = "%free"
+        # prefix_type = "decimal"
 }
