--- a/.i3status.conf
+++ b/.i3status.conf
@@ -64,6 +64,7 @@ load {
 }
 
 disk "/" {
-        format = "%free"
+        # format = "%free"
+        format = "%avail"
         # prefix_type = "decimal"
 }
