--- a/.i3/config
+++ b/.i3/config
@@ -4,8 +4,8 @@ set $mod Mod4
 font pango:Liberation Mono 10
 floating_modifier $mod
 
-bindsym $mod+Return exec i3-sensible-terminal
-# bindsym $mod+Return exec st
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec st
 
 bindsym $mod+Shift+q kill
 
