--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,8 @@ set -g prefix C-a
 
 # fix my terminal colors
 # set -g default-terminal "screen-256color"
-# set -g default-terminal "st-256color"
-set -g default-terminal "rxvt-unicode-256color"
+set -g default-terminal "st-256color"
+# set -g default-terminal "rxvt-unicode-256color"
 
 # I might have my hand on the mouse a time or two...
 # set -g mouse-select-pane on
