--- a/brightness/Makefile
+++ b/brightness/Makefile
@@ -1,16 +1,19 @@
 TARGET=bright
 CC=gcc
-CFLAGS=-Wall -g
+CFLAGS=-Wall -O2 -Wpedantic
 
-$(TARGET): $(TARGET).c
-	$(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
+$(TARGET): main.c
+	$(CC) $(CFLAGS) -o $(TARGET) main.c
 
-.PHONY: clean install
+.PHONY: clean install uninstall
 clean:
 	rm $(TARGET)
 
 install:
-	sudo chown root:root $(TARGET)
-	sudo chmod u+s $(TARGET)
-	if [ -a ~/.bin/$(TARGET) ]; then rm ~/.bin/$(TARGET); fi;
-	ln -s ~/GitHub/brentongillis/dotfiles/brightness/$(TARGET) ~/.bin/$(TARGET)
+	@sudo chown root:root $(TARGET)
+	@sudo chmod u+s $(TARGET)
+	@if [[ -L ~/.bin/$(TARGET) ]]; then rm ~/.bin/$(TARGET); fi;
+	@ln -s ~/github/brentongillis/dotfiles/brightness/$(TARGET) ~/.bin/$(TARGET)
+
+uninstall:
+	@if [[ -L ~/.bin/$(TARGET) ]]; then rm ~/.bin/$(TARGET); fi;
