--- a/.i3status.conf
+++ b/.i3status.conf
@@ -18,7 +18,8 @@ order += "volume master"
 order += "disk /"
 order += "run_watch VPN"
 order += "run_watch DHCP"
-order += "ethernet enp62s0u1u3"
+# order += "ethernet enp62s0u1u3"
+order += "ethernet enp10s0u1u3"
 order += "wireless wlp2s0"
 order += "battery 0"
 order += "load"
@@ -32,7 +33,8 @@ volume master {
         mixer_idx = 0
 }
 
-ethernet enp62s0u1u3 {
+# ethernet enp62s0u1u3 {
+ethernet enp10s0u1u3 {
         format_up = "E: %ip (%speed)"
         format_down = "E: down"
 }
