--- a/.tmux.conf
+++ b/.tmux.conf
@@ -37,10 +37,11 @@ bind | split-window -h
 # setw -g c0-change-interval 250
 
 # Reload this file for debugging purposes
-bind R source-file ~/.tmux.conf \; display-message "Reloaded!"
+bind R source-file ~/.tmux.conf \; display-message "Reloaded conf!"
+bind S source-file ~/.tmux/curr-theme \; display-message "Reloaded theme!"
 
 # set theme
 source-file ~/.tmux/curr-theme
 
 # initialize my workspace
-bind S source-file ~/.tmux/standard
+# bind S source-file ~/.tmux/standard
