--- a/.i3/config
+++ b/.i3/config
@@ -1,8 +1,8 @@
 # i3 config file
 
 set $mod Mod4
-font pango:Liberation Mono 10
-# font pango:Hack 10
+# font pango:Liberation Mono 10
+font pango:Hack 10
 floating_modifier $mod
 
 # bindsym $mod+Return exec i3-sensible-terminal
@@ -32,6 +32,8 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+
+bindsym $mod+shift+b exec bright -s0
 
 bindsym $mod+shift+v split h
 bindsym $mod+v split v
@@ -106,21 +108,21 @@ bindsym $mod+shift+x exec i3lock -i /home/brenton/pictures/wallpaper/shuttle_fla
 bindsym $mod+r mode "resize"
 
 # vimix-dark-beryl
-set $bg-color            #2C2E33
-set $inactive-bg-color   #2C2E33
-set $active-color        #235E57
-# set $active-color        #2EB398
-set $text-color          #f3f4f5
-set $inactive-text-color #5C616C
-set $urgent-bg-color     #bf616a
+# set $bg-color            #2C2E33
+# set $inactive-bg-color   #2C2E33
+# set $active-color        #235E57
+# # set $active-color        #2EB398
+# set $text-color          #f3f4f5
+# set $inactive-text-color #5C616C
+# set $urgent-bg-color     #bf616a
 
 # Arc
-# set $bg-color            #2f343f
-# set $inactive-bg-color   #2f343f
-# set $active-color        #3f4757
-# set $text-color          #f3f4f5
-# set $inactive-text-color #676E7D
-# set $urgent-bg-color     #E53935
+set $bg-color            #2f343f
+set $inactive-bg-color   #2f343f
+set $active-color        #3f4757
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
 
 # window colors
 #                       border              background         text                 indicator
@@ -166,5 +168,6 @@ bindsym XF86AudioNext exec cmus-remote -n
 # bindsym XF86AudioStop exec cmus-remote -r
 bindsym XF86AudioPrev exec cmus-remote -r
 
-exec_always feh --bg-scale /home/brenton/pictures/wallpaper/shuttle_flat.png
+exec_always feh --bg-scale /home/brenton/pictures/misc/shuttle_edit.jpg
+# exec_always feh --bg-scale /home/brenton/pictures/wallpaper/shuttle_flat.png
 # exec_always feh --bg-scale /home/brenton/pictures/i_want_to_be_here.jpg
