--- a/.i3status.conf
+++ b/.i3status.conf
@@ -15,58 +15,82 @@ general {
 }
 
 order += "volume master"
-order += "disk /"
-order += "run_watch VPN"
 order += "run_watch DHCP"
-order += "ethernet enp62s0u1u3"
-# order += "ethernet enp10s0u1u3"
+# order += "run_watch VPN"
+order += "ethernet enp62s0u1u2"
 order += "wireless wlp2s0"
-order += "battery 0"
+order += "cpu_usage"
+order += "cpu_temperature 0"
 order += "load"
+order += "disk /"
+order += "battery 0"
 order += "tztime local"
 
 volume master {
-        format = "♪: %volume"
-        format_muted = "♪: muted (%volume)"
-        device = "hw:0"
+        format = " %volume"
+        format_muted = " (%volume)"
+        # device = "hw:0"
+        device = "default"
         mixer = "Master"
         mixer_idx = 0
 }
 
-ethernet enp62s0u1u3 {
-# ethernet enp10s0u1u3 {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+ethernet enp62s0u1u2 {
+        format_up = " %ip (%speed)"
+        format_down = " down"
 }
 
 wireless wlp2s0 {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "%quality %ip (%essid, %bitrate)"
+        format_down = ""
 }
 
 battery 0 {
         format = "%status %percentage %remaining"
-        last_full_capacity = true
+        status_chr = ""
+        status_bat = ""
+        status_unk = ""
+        status_full = ""
+        threshold_type = "percentage"
+        low_threshold = 20
+        # last_full_capacity = true
 }
 
 run_watch DHCP {
         pidfile = "/var/run/dhcpcd*.pid"
+        format = " %status"
 }
 
-run_watch VPN {
-        pidfile = "/var/run/openvpn.pid"
-}
+# run_watch VPN {
+#         pidfile = "/var/run/openvpn.pid"
+# }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+        format = " %Y-%m-%d  %H:%M:%S"
 }
 
 load {
-        format = "%1min"
+        format = " %1min %5min %15min"
+        max_threshold = "4"
+        format_above_threshold = " WARN %1min %5min %15min"
 }
 
-disk "/" {
+disk / {
         # format = "%free"
-        format = "%avail"
+        format = " %avail"
         # prefix_type = "decimal"
 }
+
+cpu_usage {
+        format = " %usage"
+        max_threshold = "80"
+        format_above_threshold = " %usage"
+}
+
+cpu_temperature 0 {
+        format = " %degrees"
+        max_threshold = "70"
+        format_above_threshold = " WARN %degrees"
+        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon[[:digit:]]/temp1_input"
+}
+
