--- a/.i3status.conf
+++ b/.i3status.conf
@@ -57,7 +57,8 @@ battery 0 {
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhcpcd*.pid"
+        # pidfile = "/var/run/dhcpcd*.pid"
+        pidfile = "/var/run/dhcpcd/*.pid"
         format = " %status"
 }
 
